# streamlit_eda_ui

./: README.md  app.py  filters.py  pyproject.toml  requirements.txt
pages/: 01_page.py  autowidget.py
stedaui/: __about__.py  data.py  filters.py
